Adapta la interfaz a diversos dispositivos

--- a/src/components/NavContact.astro
+++ b/src/components/NavContact.astro
@@ -13,7 +13,7 @@ import Email from "@/assets/Email.astro";
     <Github />
     GitHub
   </a>
-  <a target="_blank" href="https://maximojsdev@gmail.com">
+  <a target="_blank" href="mailto:maximojsdev@gmail.com">
     <Email />
     maximojsdev@gmail.com
   </a>
@@ -28,7 +28,8 @@ import Email from "@/assets/Email.astro";
   nav {
     display: flex;
     align-items: center;
-    column-gap: 14px;
+    flex-wrap: wrap;
+    gap: 14px;
     margin-top: 15px;
   }
   a {
