Mejora la interfaz de inicio en telefono

--- a/src/components/Habilidades.astro
+++ b/src/components/Habilidades.astro
@@ -1,7 +1,7 @@
 <div class="habilidades__grid">
   <article class="habilidad frontend">
     <h3>Desarrollo Front-end</h3>
-    <p>Aplicaciones dinámicas, escalables y adaptables.</p>
+    <p>Aplicaciones dinámicas, escalables y flexibles.</p>
     <p>
       Garantizando la accesibilidad de las aplicaciones a diversos dispositivos.
     </p>
