--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -173,4 +173,24 @@ import SobreMi from "@/components/SobreMi.astro";
 			height: 28px !important;
 		}
 	}
+
+	@media (max-width: 500px) {
+		#inicio .inicio__title {
+			font-size: 36px;
+		}
+		#inicio .inicio__text {
+			font-size: 22px;
+		}
+		#tecnologias .slide {
+			font-size: 15px;
+			width: 80px;
+		}
+		#tecnologias .slide img {
+			height: 40px;
+		}
+		#sobre-mi .sobre-mi__article > img {
+			height: 240px;
+			width: 240px;
+		}
+	}
 </style>
