--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -175,8 +175,11 @@ import SobreMi from "@/components/SobreMi.astro";
 	}
 
 	@media (max-width: 500px) {
+		#nav {
+			padding-top: 15px;
+		}
 		#inicio .inicio__title {
-			font-size: 36px;
+			font-size: 32px;
 		}
 		#inicio .inicio__text {
 			font-size: 22px;
