--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,5 @@
 ---
+import { ViewTransitions } from "astro:transitions";
 interface Props {
 	title: string;
 }
@@ -20,11 +21,10 @@ const { title } = Astro.props;
 		/>
 		<meta
 			name="keywords"
-			content="Eduardo Maximiliano,portafolio,desarrollador,desarrollador web,desarrollador front end,diseño web,diseñador web,ui ux,freelance,maximojsdev, maximodev, maximo4ever"
+			content="maximojsdev, portafolio, desarrollador web, front end, diseño web, ui ux,freelance"
 		/>
 		<meta name="robots" content="index, follow" />
-		<meta name="author" content="Eduardo maximiliano" />
-		<meta name="theme-color" content="#303443" />
+		<meta name="author" content="Maximiliano" />
 		<meta property="og:image" content="/images/logo.webp" />
 		<meta property="og:image:alt" content="MaximoJSDev - Logo" />
 
@@ -36,25 +36,26 @@ const { title } = Astro.props;
 			href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;600;700&display=swap"
 			rel="stylesheet"
 		/>
+		<ViewTransitions />
 	</head>
 	<body>
 		<slot />
+		<style is:global>
+			:root {
+				--primaryColor: #006dff;
+			}
+			*,
+			*::after,
+			*::before {
+				box-sizing: border-box;
+				padding: 0;
+				margin: 0;
+			}
+			body {
+				background-color: #0c1423;
+				color: #fff;
+				font-family: "Roboto";
+			}
+		</style>
 	</body>
 </html>
-<style is:global>
-	:root {
-		--primaryColor: #006dff;
-	}
-	*,
-	*::after,
-	*::before {
-		box-sizing: border-box;
-		padding: 0;
-		margin: 0;
-	}
-	body {
-		background-color: #0c1423;
-		color: #fff;
-		font-family: "Roboto";
-	}
-</style>
