Cambia la fuente a Onest

--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -134,6 +134,7 @@ const PROJECTS = [
     display: flex;
     flex-direction: column;
     max-width: 500px;
+    height: 100%;
   }
   h3 {
     font-size: 28px;
@@ -141,7 +142,7 @@ const PROJECTS = [
     margin-bottom: 4px;
   }
   p {
-    font-size: 22px;
+    font-size: 21px;
     margin-bottom: 10px;
     flex-grow: 1;
     text-wrap: balance;
