--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -33,7 +33,7 @@ const { title } = Astro.props;
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
-			href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;600;700&display=swap"
+			href="https://fonts.googleapis.com/css2?family=Onest:wght@400;600;700&display=swap"
 			rel="stylesheet"
 		/>
 		<ViewTransitions />
@@ -54,7 +54,7 @@ const { title } = Astro.props;
 			body {
 				background-color: #0c1423;
 				color: #fff;
-				font-family: "Roboto";
+				font-family: "Onest", sans-serif;
 			}
 		</style>
 	</body>
