--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,15 +8,15 @@ import Slider from "@/components/Slider.astro";
 import SobreMi from "@/components/SobreMi.astro";
 ---
 
-<Layout title="Eduardo Maximiliano | Desarrollador Web & Diseñador UI/UX">
+<Layout title="Maximiliano | Desarrollador Web & Diseñador UI/UX">
 	<Header />
 	<main>
 		<section id="inicio">
 			<article class="inicio__article">
 				<h1 class="inicio__title">Hola, soy Maximiliano</h1>
-				<h3 class="inicio__subtitle">Desarrollador Web Front-end</h3>
+				<h3 class="inicio__subtitle">Desarrollador Web Frontend</h3>
 				<p class="inicio__text">
-					Creativo, proactivo y entusiasta Desarrollador Web Front-end.
+					Creativo, proactivo y entusiasta Desarrollador Web Frontend.
 					Especializado en la implementacion del Diseño de interfaces y en la
 					experiencia de usuario ideal.
 				</p>
@@ -185,7 +185,7 @@ import SobreMi from "@/components/SobreMi.astro";
 			font-size: 22px;
 		}
 		#tecnologias .slide {
-			font-size: 15px;
+			font-size: 14px;
 			width: 80px;
 		}
 		#tecnologias .slide img {
