Arregla los enlaces de los proyectos

--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -55,8 +55,8 @@ const PROJECTS = [
     title: "Spotify Clone",
     description:
       "Reproductor de música con persistencia de estado al cambiar de página, equipado con controles de volumen y tiempo de reproducción. Ofrece transiciones entre páginas suaves y animaciones sutiles para una experiencia de usuario mejorada.",
-    link: "https://maximojsdev.github.io/Url-Shortening-Api/",
-    repo: "https://github.com/MaximoJSDev/Url-Shortening-Api",
+    link: "https://maximojsdev-spotify-clone.netlify.app/",
+    repo: "https://github.com/MaximoJSDev/Spotify-Clone/",
     image: "/images/spotify.webp",
     tags: [TAGS.react, TAGS.tailwind, TAGS.astro],
   },
@@ -65,7 +65,7 @@ const PROJECTS = [
     description:
       "Aplicación de búsqueda de países con integrada con una API para obtener datos sobre diferentes países en tiempo real. Permite a los usuarios filtrar información y explorar detalles específicos de cada país.",
     link: "https://maximojsdev.github.io/Rest-countries-API/",
-    repo: "https://github.com/MaximoJSDev/Rest-countries-API",
+    repo: "https://github.com/MaximoJSDev/Rest-countries-API/",
     image: "/images/contries-api.webp",
     tags: [TAGS.javascript, TAGS.css],
   },
@@ -74,7 +74,7 @@ const PROJECTS = [
     description:
       "Aplicacion de rastreo de IPs y dominios registrados. Añade un mapa dinamico para localizar la ubicacion.",
     link: "https://maximojsdev.github.io/IP-Address-Tracker/",
-    repo: "https://maximojsdev.github.io/IP-Address-Tracker/",
+    repo: "https://github.com/MaximoJSDev/IP-Address-Tracker",
     image: "/images/ip-tracker.webp",
     tags: [TAGS.javascript],
   },
@@ -83,7 +83,7 @@ const PROJECTS = [
     description:
       "Sitio web multiplataforma y multipagina con enrutamiento dinamico. Elementos interactivos en tiempo real.",
     link: "https://space-tourism-maximojsdev.vercel.app/",
-    repo: "https://space-tourism-maximojsdev.vercel.app/",
+    repo: "https://github.com/MaximoJSDev/Space-Tourism-with-Nuxt/",
     image: "/images/space.webp",
     tags: [TAGS.nuxt, TAGS.css],
   },
